--- a/sytle.css
+++ b/sytle.css
@@ -14,7 +14,7 @@
     height: 100vh;
     padding: 10px 10px;
     line-height: 1.5em;
-    font-size: 16px;
+    font-size: 15px;
     background: #272727;
     color: #0ae10a;
     font-family: monospace;
@@ -23,6 +23,7 @@
 }
 
 #output{
+    padding: 20px;
     display: none;
     height: 100vh;
 }
