--- a/sytle.css
+++ b/sytle.css
@@ -10,7 +10,7 @@
     height: 100vh;
 }
 #input{
-    width:50%;
+    width: 50%;
     height: 100vh;
     padding: 10px 10px;
     line-height: 1.5em;
@@ -20,13 +20,43 @@
     font-family: monospace;
     font-weight: 800;
     transition: all 1s;
+    word-wrap:wrap;
+    overflow:auto;
 }
 
 #output{
     padding: 20px;
     display: none;
-    height: 100vh;
 }
 
+
+
+.name{
+    display: none;
+}
+
+._name_1{
+    display: none;
+}
+
+._shcool{
+    display: none;
+}
+
+._blog{
+    display: none;
+}
+
+.weibo{
+    display: none;
+}
+
+.github{
+    display: none;
+}
+
+.email{
+    display: none;
+}
 
 
